[tool.poetry]
name = "tensortradesdk"
version = "0.1.0"
description = ""
authors = ["Damjan Kuznar <damjan.kuznar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
solana = "^0.30.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
ariadne-codegen = {extras = ["subscriptions"], version = "^0.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate_gql_clients = "scripts.generate_gql_clients:run"
update_gql_schema = "scripts.update_gql_schema:run"